Adding files for lesson 3, 4

--- a/bootcampFiles/djangoLessons/basicForms/templates/basicApp/index.html
+++ b/bootcampFiles/djangoLessons/basicForms/templates/basicApp/index.html
@@ -5,17 +5,16 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Index page</title>
+	<title>Homepage</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
 </head>
 <body>
-	<div class="container">
-		<div class="row">
-			<div class="col-md-6 offset-md-3">
-				<h1>Index page</h1>
-				<p>Click <a href="{% url 'users' %}">here</a> to sign up</p>
-			</div>
-		</div>
-	</div>
-</body>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <h1>Homepage</h1>
+                <p>Click <a href="{% url 'form_name' %}">here</a> to got to the formspage</p>
+            </div>
+        </div>
+    </div>
 </html>
