--- a/bootcampFiles/djangoLessons/basicForms/templates/basicApp/formpage.html
+++ b/bootcampFiles/djangoLessons/basicForms/templates/basicApp/formpage.html
@@ -5,17 +5,17 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Index page</title>
+	<title>Forms</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
 </head>
 <body>
-	<div class="container">
-		<div class="row">
-			<div class="col-md-6 offset-md-3">
-				<h1>Index page</h1>
-				<p>Click <a href="{% url 'users' %}">here</a> to sign up</p>
-			</div>
-		</div>
-	</div>
+    <div class="container">
+        <h1>Forms</h1>
+        <form method="post">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+    </div>
 </body>
 </html>
