--- a/bootcampFiles/djangoLessons/second_project/templates/second_app/users.html
+++ b/bootcampFiles/djangoLessons/second_project/templates/second_app/users.html
@@ -6,12 +6,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Users</title>
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
 </head>
 <body>
-	<h1>Users</h1>
-
-    {% if users %}
+    {% comment %} {% if users %}
         <ul>
             {% for user in users %}
                 <li>{{ user }}</li>
@@ -19,6 +17,15 @@
         </ul>
     {% else %}
         <p>No users found</p>
-    {% endif %}
+    {% endif %} {% endcomment %}
+
+    <div class="container">
+        <h1>Please sign up here</h1>
+        <form method="POST">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <button type="submit" class="btn btn-primary">Sign up</button>
+        </form>
+    </div>
 </body>
 </html>
